--- a/Web-App-Mvc-Presentation/Views/Partial/_header.cshtml
+++ b/Web-App-Mvc-Presentation/Views/Partial/_header.cshtml
@@ -18,6 +18,13 @@
                     {
                         <a a asp-controller="Course" asp-action="CourseView" class="menu-link-login">Courses</a>
                     }
+                    @if (TempData["SuccessMessage"] != null)
+                    {
+                        <a class="alert alert-success" role="alert">
+                            @TempData["SuccessMessage"]
+                        </a>
+                    }
+
                 </nav>
 
             </div>
