--- a/Web-App-Mvc-Presentation/Views/Shared/Sections/_Showcase.cshtml
+++ b/Web-App-Mvc-Presentation/Views/Shared/Sections/_Showcase.cshtml
@@ -1,6 +1,15 @@
 ﻿<section id="showcase">
     <div class="container">
-
+        @if (TempData["SuccessMessage"] != null && Context.Request.Path == "/")
+        {
+            <a class="alert alert-success" role="alert">
+                @TempData["SuccessMessage"]
+            </a>
+        }
+    </div>
+    
+    <div class="container">
+        
         <div class="content">
             <h1>Task Management Assistant You Gonna Love</h1>
             <p>We offer you a new generation of task management system. Plan, manage & track all your task in one flexible tool.</p>
