--- a/Web-App-Mvc-Presentation/Views/Auth/Login.cshtml
+++ b/Web-App-Mvc-Presentation/Views/Auth/Login.cshtml
@@ -54,8 +54,8 @@
                     <p>Or sign in with your social network</p>
                 </div>
                 <div class="account-buttons">
-                    <a class="btn-gray" href="#"><i class="fa-brands fa-youtube"></i></i><p>Google</p></a>
-                    <a class="btn-gray" href="#"><i class="fa-brands fa-square-facebook"></i><p>Facebook</p></a>
+                    <a asp-action="Google" asp-controller="Auth" class="btn-gray" ><i class="fa-brands fa-youtube"></i></i><p>Google</p></a>
+                    <a asp-action="Facebook" asp-controller="Auth" class="btn-gray" ><i class="fa-brands fa-square-facebook"></i><p>Facebook</p></a>
                 </div>
             </div>
 
