--- a/Web-App-Mvc-Presentation/wwwroot/css/scss/core/_base.scss
+++ b/Web-App-Mvc-Presentation/wwwroot/css/scss/core/_base.scss
@@ -1,8 +1,44 @@
 html, body {
     @include standard-text;
     font-size: 16px; 
-    background-color: rgb(255, 255, 255);
     
+    
+}
+
+.fixed-bottom{
+    position:fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+.cookies-improve {
+    background-color: #9397AD;
+    padding: 50px;
+    border-radius:10px;
+
+    .container {
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+        color: black;
+
+        button {
+            margin-left: 40px;
+            width: 150px;
+        }
+    }
+}
+
+
+.container {
+    margin-right: auto;
+    margin-left: auto;
+    padding-right: 15px;
+    padding-left: 15px;
+    width: 100%;
+    max-width: 1140px;
 }
 
 .text-xs { @include text-xs; }
