--- a/Web-App-Mvc-Presentation/wwwroot/css/scss/core/_colors.scss
+++ b/Web-App-Mvc-Presentation/wwwroot/css/scss/core/_colors.scss
@@ -1,3 +1,15 @@
+:root {
+    background-color: white 
+}
+:root.dark{
+    background-color:#000000;
+    color:white;
+    
+    
+}
+
+
+
 $transparent: transparent;
 $white:     #FFFFFF;
 $gray-100:  #F3F6FF;
@@ -10,6 +22,7 @@ $gray-700:  #565973;
 $gray-800:  #33354D;
 $gray-900:  #0B0F19;
 $black:     #000000;
+$danger:    #EF4444;
 $danger:    #EF4444;
 $success:   #22C55E;
 $warning:   #FFBA08;
