--- a/Web-App-Mvc-Presentation/wwwroot/css/scss/sections/_courses.scss
+++ b/Web-App-Mvc-Presentation/wwwroot/css/scss/sections/_courses.scss
@@ -59,6 +59,7 @@
 
                 img {
                     border-radius: 10px;
+                    max-width:100%;
                 }
 
                 .line {
