--- a/Web-App-Mvc-Presentation/wwwroot/css/scss/core/_colors.scss
+++ b/Web-App-Mvc-Presentation/wwwroot/css/scss/core/_colors.scss
@@ -1,9 +1,61 @@
 :root {
-    background-color: white;
+
 }
 
 :root.dark {
-    background-color: #33354D;
+    background-color: #33354D !important;
+
+
+    #features .container .box1 {
+        border-right: white;
+        border-bottom: white;
+        border-left: white;
+        border-top: white;
+    }
+
+    #features .container .box2 {
+        border-right: #6365f114;
+        border-bottom: #6365f114;
+        border-left: #6365f114;
+        border-top: #6365f114;
+    }
+
+    #features .container .box:hover {
+        background-color: #6365f114;
+        border-radius:10px;
+    }
+
+    #features .container .box {
+        border-color: #6365f114;
+    }
+
+    #features .container .box3 {
+        border-right: black;
+        border-bottom: black;
+        border-left: black;
+        border-top: black;
+    }
+
+    #features .container .box4 {
+        border-right: black;
+        border-bottom: black;
+        border-left: black;
+        border-top: black;
+    }
+
+    #features .container .box3 {
+        border-right: black;
+        border-bottom: black;
+        border-left: black;
+        border-top: black;
+    }
+
+    #features .container .box5 {
+        border-right: black;
+        border-bottom: black;
+        border-left: black;
+        border-top: black;
+    }
 
     h1, h3, h4, h6, h8, h7 {
         color: white;
@@ -32,8 +84,6 @@
     a.btn-social {
         background-color: #33354D;
     }
-
-    
 }
 
     $transparent: transparent;
@@ -61,23 +111,23 @@
     $theme-gradient-background: linear-gradient(-1deg, rgba(99, 101, 241, 0.10) 0%, rgba(216, 70, 239, 0.05) 45%, rgba(241, 244, 253, 0.07) 75%);
 
     @mixin shadow-s {
-    box-shadow: 0px 2px 6.4px -1px rgba(19, 16, 34, 0.03), 0px 4.4px 12px -1px rgba(19, 16, 34, 0.06);
+        box-shadow: 0px 2px 6.4px -1px rgba(19, 16, 34, 0.03), 0px 4.4px 12px -1px rgba(19, 16, 34, 0.06);
     }
 
     @mixin shadow-m {
-    box-shadow: 0px 4px 9px -1px rgba(19, 16, 34, 0.03), 0px 4.4px 20px -1px rgba(19, 16, 34, 0.05);
+        box-shadow: 0px 4px 9px -1px rgba(19, 16, 34, 0.03), 0px 4.4px 20px -1px rgba(19, 16, 34, 0.05);
     }
 
     @mixin shadow-l {
-    box-shadow: 0px 4px 13px -2px rgba(19, 16, 34, 0.06), 0px 4.8px 24.4px -6px rgba(19, 16, 34, 0.10);
+        box-shadow: 0px 4px 13px -2px rgba(19, 16, 34, 0.06), 0px 4.8px 24.4px -6px rgba(19, 16, 34, 0.10);
     }
 
     @mixin theme-shadow {
-    box-shadow: 0px 8px 18px -8px rgba(99, 102, 241, 0.90);
+        box-shadow: 0px 8px 18px -8px rgba(99, 102, 241, 0.90);
     }
 
     @mixin theme-secondary-shadow {
-    box-shadow: 0px 8px 18px -8px rgba(19, 16, 34, 0.15);
+        box-shadow: 0px 8px 18px -8px rgba(19, 16, 34, 0.15);
     }    
 
 
