--- a/Web-App-Mvc-Presentation/wwwroot/css/scss/sections/_dontmissanything.scss
+++ b/Web-App-Mvc-Presentation/wwwroot/css/scss/sections/_dontmissanything.scss
@@ -7,7 +7,7 @@
         margin-top: 100px;
         padding-top: 100px;
         padding-bottom: 100px;
-
+        
         .head-line {
             display: flex;
             justify-content: center;
@@ -51,11 +51,14 @@
         }
 
         .sub {
-            margin-top: 30px;
+            margin-top: 0px;
             display: flex;
             justify-content: center;
-            margin-bottom: 10px;
-
+            margin-bottom: 0px;
+            align-items:center;
+            button{
+                height:34px;
+            }
             input {
                 border-radius: 10px;
                 width: 100%;
