--- a/Web-App-Mvc-Presentation/Views/Courses/CourseView.cshtml
+++ b/Web-App-Mvc-Presentation/Views/Courses/CourseView.cshtml
@@ -1,4 +1,4 @@
-﻿@model CoursesInfoViewModel
+﻿@model IEnumerable<CourseModel>
 @{
     ViewData["Title"] = "Courses";
 
@@ -43,10 +43,10 @@
         else
         {
             <div class="box-row">
-                @foreach (var items in Model!.Courses)
+                @foreach (var item in Model)
                 {
 
-                    <a class="box-link" href="singlecourse.html">
+                    <a class="box-link" asp-action="OneCourseView" asp-controller="Courses" asp-route-id="@item.Id">
                         <div class="box">
                             <div class="badge">
                                 <img src="images/badge.svg" alt="">
@@ -54,13 +54,13 @@
                             <div class="marks">
                                 <img src="images/S.svg" alt="">
                             </div>
-                            <img src="~/images/@items.ImageName" alt="">
-                            <h6>@items.Title</h6>
-                            <p>@items.Author</p>
-                            <p>@items.OrginalPrice</p>
+                            <img src="~/images/@item.ImageName" alt="">
+                            <h6>@item.Title</h6>
+                            <p>@item.Author</p>
+                            <p>@item.OrginalPrice</p>
                             <div class="line">
-                                <p>@items.Hours</p>
-                                <p>@items.DiscountPrice</p>
+                                <p>@item.Hours</p>
+                                <p>@item.DiscountPrice</p>
                             </div>
 
                         </div>
