--- a/Web-App-Mvc-Presentation/wwwroot/css/scss/sections/_singlecourse.scss
+++ b/Web-App-Mvc-Presentation/wwwroot/css/scss/sections/_singlecourse.scss
@@ -3,11 +3,11 @@
     position: relative;
 
     .map {
-
-        img {
-            width: 100%;
-        }
-
+        
+         img{
+            width:100%;
+            height:800px;
+         }  
         .container {
 
 
