--- a/Web-App-Mvc-Presentation/Views/Shared/Sections/_Showcase.cshtml
+++ b/Web-App-Mvc-Presentation/Views/Shared/Sections/_Showcase.cshtml
@@ -23,8 +23,8 @@
             </div>
         </div>
         <div class="background-image">
-            <img class="background-image" src="./images/image (16).svg" alt="">
+            <img class="background-image" src="~/images/image(16).svg" alt="">
         </div>
-
+        
     </div>
 </section>
