--- a/Web-App-Mvc-Presentation/wwwroot/css/site.css
+++ b/Web-App-Mvc-Presentation/wwwroot/css/site.css
@@ -1238,18 +1238,24 @@ footer .container .social-media {
   margin-top: 20px;
   display: flex;
   flex-wrap: wrap;
-  gap: 15px;
+  gap: 30px;
 }
 #courses .container .box-row .box-link {
   flex: 0 0 calc(33.33% - 20px);
 }
 #courses .container .box-row .box-link :hover {
   background-color: rgba(99, 101, 241, 0.0784313725);
-  border-radius: 10px;
 }
 #courses .container .box-row .box {
   position: relative;
   z-index: 0;
+  box-shadow: 10px 4px 8px rgba(1, 0, 0, 0.3);
+  padding: 0px;
+  border-radius: 10px;
+}
+#courses .container .box-row .box .content-mat {
+  padding-left: 20px;
+  padding-right: 20px;
 }
 #courses .container .box-row .box .marks {
   position: absolute;
